# mx-sdk-rs-0.25.0-versions-changed

./: CHANGELOG.md  Cargo.toml  README.md  sizes.sh  vm-test-build-copy.sh
contracts/feature-tests/rust-testing-framework-tester/: Cargo.toml
contracts/feature-tests/rust-testing-framework-tester/meta/: Cargo.toml
dharitri-wasm-debug/: Cargo.toml
dharitri-wasm-debug/src/: contract_map.rs  lib.rs  managed_test_util.rs
dharitri-wasm-debug/src/abi_json/: mod.rs
dharitri-wasm-debug/src/api/: blockchain_api_mock.rs  call_value_api_mock.rs  crypto_api_mock.rs  endpoint_arg_api_mock.rs  endpoint_finish_api_mock.rs  error_api_mock.rs  log_api_mock.rs  print_api_mock.rs  send_api_mock.rs  storage_api_mock.rs  vm_api_mock.rs
dharitri-wasm-debug/src/denali_step/: transfer.rs
dharitri-wasm-debug/src/meta/: meta_abi.rs  meta_build_wasm.rs  meta_wasm_src.rs  mod.rs
dharitri-wasm-debug/src/testing_framework/: contract_obj_wrapper.rs  helper_macros.rs  mod.rs
dharitri-wasm-debug/src/tx_execution/: exec_call.rs  exec_contract_endpoint.rs
dharitri-wasm-debug/src/tx_mock/: tx_context.rs  tx_managed_types.rs
dharitri-wasm-debug/src/world_mock/: blockchain_mock.rs  blockchain_mock_init.rs
dharitri-wasm-debug/tests/: derive_managed_vec_item_biguint_test.rs  derive_managed_vec_item_dct_token_payment_test.rs  derive_managed_vec_item_numbers_test.rs  managed_vec_test.rs  sample_adder.rs  test_hash_map_mapper.rs  test_hash_map_storage_mapper.rs  test_hash_set_mapper.rs  test_hash_unordered_set_mapper.rs  test_linked_list_mapper.rs  test_queue_mapper.rs  test_vec_mapper.rs
dharitri-wasm-derive/: Cargo.toml
(+407 files in other folders)
