[package]
name = "rust-testing-framework-tester"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@dharitri.com>"]
edition = "2018"
publish = false

[dependencies.dharitri-wasm]
version = "0.3.5"
path = "../../../dharitri-wasm"

[dependencies.adder]
path = "../../examples/adder"

[dev-dependencies.dharitri-wasm-debug]
version = "0.3.5"
path = "../../../dharitri-wasm-debug"

[dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
